--- a/blog/sample/TouchPull/app/src/main/res/layout/activity_main.xml
+++ b/blog/sample/TouchPull/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="net.qiujuer.sample.touchpull.MainActivity">
 
     <net.qiujuer.sample.touchpull.PullView
-        android:layout_width="86dp"
-        android:layout_height="140dp"
-        android:layout_centerInParent="true"
-        android:background="#10000000" />
+        android:id="@+id/pull"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        app:pColor="@color/colorAccent"
+        app:pDragHeight="120dp"
+        app:pRadius="25dp"
+        app:pTangentAngle="25"
+        app:pTargetGravityHeight="4dp"
+        app:pTargetWidth="132dp" />
 </RelativeLayout>
