update TouchPull widget

--- a/android/widget/TouchPull/touchpull/src/main/res/values/attr_pull.xml
+++ b/android/widget/TouchPull/touchpull/src/main/res/values/attr_pull.xml
@@ -7,5 +7,6 @@
         <attr name="pTangentAngle" format="integer"/>
         <attr name="pTargetWidth" format="dimension"/>
         <attr name="pTargetGravityHeight" format="dimension"/>
+        <attr name="pContentDrawable" format="reference"/>
     </declare-styleable>
 </resources>
